src/assets/home.css
.main.container {
  padding-top: 5em;
  padding-bottom: 2em;
  height: 200%;
}

main.card{
  padding-left: 1em;
  padding-right: 1em;
  background-color: white;
}
main{
  background-image: url("/images/stars.png");
}
.parallax{
  position: relative;
  perspective: 8px;
  transform: translateY(0px);
}
a.anchor{
  position: relative;
  top: -3em;
}
img.association{
  position: relative;
  top: -1em;
}

/* From: https://www.w3schools.com/howto/howto_css_responsive_iframes.asp */

.video-container {
  position: relative;
  overflow: hidden;
  width: 100%;
  padding-top: 56.25%; /* 16:9 Aspect Ratio (divide 9 by 16 = 0.5625) */
}

.video-container iframe {
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  width: 100%;
  height: 100%;
}

